<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.katakerja.admin.ui.profile.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_profile_to_nav_change_password"
            app:destination="@id/nav_change_password"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_profile_to_nav_setting"
            app:destination="@id/nav_setting"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_profile_to_nav_about"
            app:destination="@id/nav_about"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="extra_user"
            app:argType="com.katakerja.admin.core.domain.model.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.katakerja.admin.ui.profile.edit.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile">
        <argument
            android:name="extra_user"
            app:argType="com.katakerja.admin.core.domain.model.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.katakerja.admin.ui.profile.password.ChangePassword"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.katakerja.admin.ui.profile.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.katakerja.admin.ui.profile.about.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about" />

</navigation>