<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_add_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/cd_illustration"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextStyles.PoppinsLarge.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/add_books"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_back"
            app:layout_constraintStart_toEndOf="@+id/btn_add_back"
            app:layout_constraintTop_toTopOf="@+id/btn_add_back" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_cover_add"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="@dimen/radius_card"
            app:layout_constraintDimensionRatio="13:19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_back">

            <ImageView
                android:id="@+id/iv_cover_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/img_cover_default" />


        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btn_update_cover"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="-16dp"
            android:background="@null"
            android:contentDescription="@string/cd_button_add_avatar"
            android:elevation="2dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toEndOf="@+id/cv_cover_add"
            app:layout_constraintTop_toBottomOf="@+id/cv_cover_add"
            app:srcCompat="@drawable/ic_add" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_isbn"
            style="@style/TextInput"
            android:layout_marginTop="32dp"
            android:hint="@string/isbn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_cover_add"
            app:shapeAppearance="@style/ShapeRounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_isbn"
                style="@style/TextInputEdit"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/book_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_isbn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                style="@style/TextInputEdit"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_author"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_author"
                style="@style/TextInputEdit"
                android:inputType="textCapWords|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_publisher"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/publisher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_author">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_publisher"
                style="@style/TextInputEdit"
                android:inputType="textCapWords|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_release_year"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/release_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_publisher">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_release_year"
                style="@style/TextInputEdit"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_release_year">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_category"
                style="@style/TextInputEdit"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_stock"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/stock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_stock"
                style="@style/TextInputEdit"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/TextInput"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_stock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                style="@style/TextInputEdit"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_book"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_books"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description" />

        <ProgressBar
            android:id="@+id/pb_update"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_book"
            app:layout_constraintEnd_toEndOf="@+id/btn_add_book"
            app:layout_constraintTop_toTopOf="@+id/btn_add_book" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>